# novation-launchpad

./: ChangeLog.md  novation-launchpad.cabal
Sound/Novation/: Launchpad.hs
Sound/Novation/Launchpad/: Chars.hs  Chars4x4.hs  Chars8x8.hs
