name:                novation-launchpad
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Brian McKenna
maintainer:          brian@brianmckenna.org
category:            Sound
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Sound.Novation.Launchpad
                     , Sound.Novation.Launchpad.Chars8x8
                     , Sound.Novation.Launchpad.Chars4x4
  build-depends:       base >=4.9 && <4.10
                     , PortMidi >=0.1 && <0.2
                     , bytestring
                     , transformers
  default-language:    Haskell2010
